# Jiyu_udp_attack

./: .gitignore  .pylintrc  Jiyu_attack.py  Jiyu_udp_attack.spec  LICENSE  README.md  pyproject.toml  sender.py
Jiyu_udp_attack/: __init__.py  __main__.py  arg_display.py  ip_analyze.py  packet.py  sender.py
