[tool.poetry]
name = "Jiyu-udp-attack"
version = "1.2.1"
description = "Send packets to student machines disguised as Jiyu teacher machine"
authors = ["weilycoder <weily2009@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
scapy = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
